# max-wave-height-map

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: README.md  main.py  pyproject.toml  test.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: AnimateMap.tsx  App.tsx
