[tool.poetry]
name = "glint-solar"
version = "0.1.0"
description = ""
authors = ["KatyaPrusakova <katia.prusakova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2024.1.1"
scipy = "^1.12.0"
netcdf4 = "^1.6.5"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pytest = "^8.0.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
